# Generated by Django 5.0.9 on 2026-04-17 09:54

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('customers', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Enquiry',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('customer_name', models.CharField(max_length=255)),
                ('customer_email', models.EmailField(max_length=254)),
                ('customer_phone', models.CharField(blank=True, default='', max_length=30)),
                ('customer_postcode', models.CharField(max_length=20)),
                ('job_type', models.CharField(max_length=100)),
                ('description', models.TextField()),
                ('urgency', models.CharField(choices=[('emergency', 'Emergency'), ('urgent', 'Urgent'), ('routine', 'Routine'), ('flexible', 'Flexible')], default='routine', max_length=20)),
                ('preferred_date', models.DateField(blank=True, null=True)),
                ('ai_score', models.IntegerField(blank=True, null=True)),
                ('ai_recommendation', models.CharField(blank=True, choices=[('APPROVE', 'Approve'), ('REJECT', 'Reject'), ('MANUAL_REVIEW', 'Manual review')], default='', max_length=20)),
                ('ai_confidence', models.CharField(blank=True, choices=[('HIGH', 'High'), ('MEDIUM', 'Medium'), ('LOW', 'Low')], default='', max_length=10)),
                ('ai_explanation', models.TextField(blank=True, default='')),
                ('ai_flags', models.JSONField(blank=True, default=list)),
                ('ai_qualified_at', models.DateTimeField(blank=True, null=True)),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('APPROVED', 'Approved'), ('REJECTED', 'Rejected'), ('NEEDS_MANUAL_REVIEW', 'Needs manual review'), ('CANCELLED', 'Cancelled')], default='PENDING', max_length=25)),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('rejection_reason', models.TextField(blank=True, default='')),
                ('sm8_job_uuid', models.UUIDField(blank=True, null=True)),
                ('sm8_created_at', models.DateTimeField(blank=True, null=True)),
                ('source', models.CharField(default='embed_widget', max_length=50)),
                ('customer', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='enquiries', to='customers.customer')),
                ('reviewed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='enquiries_reviewed', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name_plural': 'enquiries',
                'db_table': 'enquiries',
                'indexes': [models.Index(fields=['status'], name='enquiries_status_idx'), models.Index(fields=['-created_at'], name='enquiries_created_idx'), models.Index(fields=['customer'], name='enquiries_customer_idx')],
            },
        ),
    ]
