# Generated by Django 5.0.9 on 2026-04-17 09:54

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('customers', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='HeatshieldMember',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('plan_type', models.CharField(default='standard', max_length=50)),
                ('monthly_amount', models.DecimalField(decimal_places=2, default=10.0, max_digits=8)),
                ('start_date', models.DateField()),
                ('renewal_date', models.DateField()),
                ('status', models.CharField(choices=[('active', 'Active'), ('lapsed', 'Lapsed'), ('cancelled', 'Cancelled'), ('pending_renewal', 'Pending renewal')], default='active', max_length=20)),
                ('last_renewed_at', models.DateField(blank=True, null=True)),
                ('renewal_reminder_60_sent', models.BooleanField(default=False)),
                ('renewal_reminder_30_sent', models.BooleanField(default=False)),
                ('renewal_reminder_0_sent', models.BooleanField(default=False)),
                ('last_service_job_uuid', models.UUIDField(blank=True, null=True)),
                ('notes', models.TextField(blank=True, default='')),
                ('customer', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='heatshield_memberships', to='customers.customer')),
            ],
            options={
                'db_table': 'heatshield_members',
                'indexes': [models.Index(condition=models.Q(('status', 'active')), fields=['renewal_date'], name='hs_renewal_date_active_idx')],
            },
        ),
        migrations.AddConstraint(
            model_name='heatshieldmember',
            constraint=models.UniqueConstraint(condition=models.Q(('status', 'active')), fields=('customer',), name='hs_unique_active_member'),
        ),
    ]
